service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  type: ClusterIP
  selector:
    component: whoami
  ports:
   - name: http
     port: 80
